<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/dialog_bg" android:background="@drawable/white_corner_bg" android:paddingLeft="@dimen/notice_dialog_default_padding" android:paddingTop="@dimen/notice_dialog_default_padding" android:paddingBottom="@dimen/notice_default_margin" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/big_font_size" android:textColor="@color/colorBlack" android:gravity="left" android:id="@id/titleTip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/notice_dialog_default_padding" android:text="@string/pwd_input_dialog_titile" android:maxLines="20" />
    <TextView android:textSize="@dimen/defaultFontSize" android:textColor="@color/colorBlack" android:gravity="left" android:id="@id/message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginRight="@dimen/notice_dialog_default_padding" android:maxLines="40" android:layout_below="@id/titleTip" />
    <LinearLayout android:id="@id/button_ll" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="27.0dip" android:layout_marginRight="@dimen/notice_default_margin" android:layout_below="@id/message" android:layout_alignParentRight="true">
        <Button android:textSize="@dimen/defaultFontSize" android:textColor="@drawable/alipay_text_color_selector" android:gravity="center" android:id="@id/cancel" android:background="@drawable/notice_dialog_btn_selector" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="32.0dip" android:text="@string/cancel" android:singleLine="true" />
        <Button android:textSize="@dimen/defaultFontSize" android:textColor="@drawable/alipay_text_color_selector" android:gravity="center" android:id="@id/ensure" android:background="@drawable/notice_dialog_btn_selector" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="32.0dip" android:text="@string/confirm" android:singleLine="true" />
    </LinearLayout>
</RelativeLayout>