<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/titleBarContainer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" />
    <ImageView android:id="@id/texture_image" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/texture" android:scaleType="centerCrop" android:layout_alignParentTop="true" />
    <RelativeLayout android:id="@id/title_bar_ad_container" android:tag="ad_titlebar" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_below="@id/titleBarContainer" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/text_hint_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="23.0dip" android:layout_below="@id/titleBarContainer">
        <TextView android:textSize="13.329987dip" android:textColor="#80ffffff" android:ellipsize="end" android:gravity="center" android:id="@id/text_hint_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
        <TextView android:textSize="13.329987dip" android:textColor="@android:color/white" android:ellipsize="end" android:id="@id/text_hint_detail" android:paddingLeft="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="查看详情" android:singleLine="true" android:layout_centerHorizontal="true" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/page_bottom_items" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout android:orientation="horizontal" android:id="@id/channel_pre_show_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <TextView android:textSize="13.329987dip" android:textColor="#80ffffff" android:gravity="center" android:id="@id/channel_pre_show_name" android:paddingTop="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/qr_bar_container" android:background="@drawable/barcode_bak_botton" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:layout_marginBottom="96.0dip" android:layout_above="@id/page_bottom_items" android:layout_below="@id/text_hint_layout">
        <ImageView android:gravity="center" android:id="@id/barcode_sizeimageview" android:paddingLeft="24.0dip" android:paddingTop="40.0dip" android:paddingRight="24.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:scaleType="centerCrop" android:layout_weight="45.0" />
        <ImageView android:gravity="center" android:orientation="vertical" android:id="@id/qrcode_sizeimageview" android:paddingLeft="24.0dip" android:paddingTop="18.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="64.0" />
        <TextView android:textSize="12.0dip" android:textColor="#ff586d98" android:gravity="center" android:id="@id/refresh_every_minutes" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/refresh_every_minute" android:drawablePadding="6.0dip" android:layout_weight="11.0" />
    </LinearLayout>
    <ImageView android:id="@id/member_icon" android:padding="2.0dip" android:visibility="visible" android:layout_width="37.0dip" android:layout_height="37.0dip" android:layout_marginTop="-17.5dip" android:layout_alignTop="@id/qr_bar_container" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    <TextView android:textSize="13.0dip" android:id="@id/member_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="member_primary" android:layout_below="@id/member_icon" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/risk_tips_layout" android:background="@drawable/risk_tips_layout_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="12.0dip" android:layout_marginTop="-20.0dip" android:layout_marginRight="12.0dip" android:layout_alignTop="@id/qr_bar_container" android:layout_alignBottom="@id/qr_bar_container">
        <TextView android:textSize="14.0dip" android:textColor="#ff108ee9" android:id="@id/request_money_btn" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/go_request_money" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        <ImageView android:id="@id/risk_icon" android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_marginTop="60.0dip" android:src="@drawable/default_notice_icon" android:scaleType="centerCrop" android:layout_centerHorizontal="true" />
        <TextView android:textSize="16.0dip" android:textColor="@android:color/black" android:gravity="center|top" android:id="@id/risk_tips_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="40.0dip" android:text="@string/risk_hint_text" android:layout_below="@id/risk_icon" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="-10.0dip" android:layout_above="@id/view_detail_btn" android:layout_below="@id/risk_tips_text">
            <Button android:textSize="16.0dip" android:textColor="#ff108ee9" android:layout_gravity="center_horizontal" android:id="@id/risk_confirm_btn" android:background="@drawable/border_btn_bg" android:paddingLeft="30.0dip" android:paddingTop="5.0dip" android:paddingRight="30.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginTop="20.0dip" android:text="@string/i_know" />
            <TextView android:textSize="14.0dip" android:textColor="#ff108ee9" android:layout_gravity="center_horizontal" android:id="@id/dont_show_again" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/dont_show_again" />
        </LinearLayout>
        <TextView android:textSize="14.0dip" android:textColor="#ff108ee9" android:id="@id/view_detail_btn" android:paddingLeft="15.0dip" android:paddingTop="10.0dip" android:paddingRight="15.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hint_top_detail" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/osp_tabs" android:layout_width="fill_parent" android:layout_height="96.0dip" android:layout_alignParentBottom="true" />
</RelativeLayout>